--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,8 @@
         "php": ">=5.3.2"
     },
     "autoload": {
-        "psr-0": { "lesha724": "" }
+        "psr-4": {
+            "lesha724\\Apidoc\\": ""
+        }
     }
 }
